docker images fra 200 til 80 mb